--- a/ListBox DataTemplate/App.xaml
+++ b/ListBox DataTemplate/App.xaml
@@ -2,7 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
+    
+
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ListBox/Template1/ListBoxTemplate1.xaml" />
+                
+                
+            </ResourceDictionary.MergedDictionaries>
+            <!-- Other resources if you have -->
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
